JSON of Events parsed trough API
Source for calendar is public Google Calendar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="title_go_abroad">Go Abroad</string>
     <string name="title_more">More</string>
     <string name="news_image_of_lda">News image of LDA</string>
+    <string name="title_closest_events">Closest events</string>
 
 
 </resources>
