Go Abroad Header added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,9 @@
     <string name="no_events_planned">Oops, mising data! Here are no events, but you can check you Facebook.</string>
     <string name="no_posts">Oops, missing data! Please, contact us to solve the problem.</string>
 
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
 
 </resources>
